# rezerwacja-sal

./: .gitignore  pyproject.toml  pytest.ini
src/: requirements.txt
src/booking/: admin.py  calendar_export.py  models.py  services.py  urls.py  views.py
src/booking/migrations/: 0001_initial.py  0002_reservation.py  0002_reservationparticipant.py
src/booking/tests/: test_calendar_export.py  test_models.py  test_services.py  test_views.py
src/booking/tests/acceptance/: test_admin_bdd.py  test_auth_bdd.py  test_reservation_bdd.py
src/booking/tests/acceptance/features/: admin.feature  auth.feature  reservation.feature
src/booking/tests/functional/: test_admin_scenarios.py  test_user_scenarios.py
src/core/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/templates/: base.html  edit_reservation.html  index.html  login.html
src/templates/static/js/: reservation.js
