[project]
name = "conference-booking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.8",
    "nest-asyncio>=1.6.0",
    "icalendar>=5.1.1",
]

[dependency-groups]
dev = [
    "nest-asyncio>=1.6.0",
    "pyppeteer>=2.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-bdd>=8.1.0",
    "pytest-django>=4.11.1",
]
